--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Groups list</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<h2 style="text-align: center;">
-    <strong>Groups list</strong>
-</h2>
+<main>
+    <div class="container-fluid" style="margin-top: 20px">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-primary">
 
-<table style="margin-left: auto; margin-right: auto;" border=1>
-    <thead>
-    <tr>
-        <th>Group Name</th>
-        <th>Counselor Lastname</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="group : ${groups}">
-        <td style="text-align: left;" th:text="${group.name}">GroupName</td>
-        <td style="text-align: left;" th:text="${group.counselor.lastName}">Counselor LastName</td>
-    </tr>
-    </tbody>
-</table>
+                    <div class="panel-heading">
+                        <h1 class="panel-title">Groups list</h1>
+                    </div>
+                    <div class="panel-body">
+                        <div class="table-responsive" th:if="${not #lists.isEmpty(groups)}">
+
+                            <table class="table table-hover ">
+                                <thead class="thead-inverse">
+                                <tr>
+                                    <th>Group Name</th>
+                                    <th>Counselor Lastname</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="group : ${groups}">
+                                    <td style="text-align: left;">
+                                        <a class="btn btn-info" th:text="${group.name}" th:href="@{/groups/{groupId}(groupId=${group.id})}"
+                                            href="http://localhost:8080/groups/XX">GroupName</a>
+                                    </td>
+                                    <td style="text-align: left;" th:text="${group.counselor.lastName}">Counselor
+                                        LastName
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<div class="col-md-6 col-md-offset-3">
+    <footer class="panel-footer">
+        <div>&copy; Alex Soft 2017</div>
+    </footer>
+</div>
 </body>
 </html>
