--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Students list</title>
+    <title th:text="${not #lists.isEmpty(students)} ? 'Students in group ' + ${groupName} : 'Wrong Group ID!'">
+        Students in group XXXXX
+    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<h2 style="text-align: center;">
-    <strong>Group XXXX students list</strong>
-</h2>
+<main>
+    <div class="container-fluid" style="margin-top: 20px">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-primary">
 
-<table style="margin-left: auto; margin-right: auto;" border=1>
-    <thead>
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Zip Code</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="student : ${students}">
-        <td style="text-align: left;" th:text="${student.firstName}">FirstName</td>
-        <td style="text-align: left;" th:text="${student.lastName}">LastName</td>
-        <td style="text-align: left;" th:text="${student.address.zipCode}">Zip</td>
-    </tr>
-    </tbody>
-</table>
+                    <div class="panel-heading">
+                        <h1 class="panel-title" th:text="${not #lists.isEmpty(students)} ? 'Students in group ' + ${groupName} : 'Wrong Group ID!'">Group XXXX students list</h1>
+                    </div>
+                    <div class="panel-body">
+                        <div class="table-responsive" th:if="${not #lists.isEmpty(students)}">
+
+                            <table class="table table-hover ">
+                                <thead class="thead-inverse">
+                                <tr>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Zip Code</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="student : ${students}">
+                                    <td style="text-align: left;" th:text="${student.firstName}">FirstName</td>
+                                    <td style="text-align: left;" th:text="${student.lastName}">LastName</td>
+                                    <td style="text-align: left;" th:text="${student.address.zipCode}">Zip</td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<div class="col-md-6 col-md-offset-3">
+    <footer class="panel-footer">
+        <div>&copy; Alex Soft 2017</div>
+    </footer>
+</div>
 </body>
 </html>
